--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "avagogo.io",
   "version": "12.1.29",
-  "private": true,
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -10,14 +10,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "3.6.5",
+    "@walletconnect/web3-provider": "1.7.1",
+    "core-js": "3.20.3",
     "ethers": "5.5.3",
-    "moment": "^2.29.1",
-    "numeral": "^2.0.6",
-    "uuid": "^8.3.2",
+    "moment": "2.29.1",
+    "moralis": "1.2.3",
+    "numeral": "2.0.6",
+    "uuid": "8.3.2",
     "vue": "3.0.0",
-    "vue-router": "4.0.0-0",
-    "vuex": "4.0.0-0"
+    "vue-router": "4.0.12",
+    "vuex": "4.0.2"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "0.2.1",
@@ -26,14 +28,14 @@
     "@tailwindcss/postcss7-compat": "2.2.7",
     "@tailwindcss/typography": "0.4.1",
     "@vue/cli-plugin-babel": "4.5.0",
-    "@vue/cli-plugin-e2e-webdriverio": "4.5.0",
+    "@vue/cli-plugin-e2e-webdriverio": "4.5.15",
     "@vue/cli-plugin-eslint": "4.5.0",
     "@vue/cli-plugin-router": "4.5.0",
     "@vue/cli-plugin-unit-jest": "4.5.0",
     "@vue/cli-plugin-vuex": "4.5.0",
     "@vue/cli-service": "4.5.0",
     "@vue/compiler-sfc": "3.0.0",
-    "@vue/test-utils": "2.0.0-0",
+    "@vue/test-utils": "1.3.0",
     "babel-eslint": "10.1.0",
     "chromedriver": "84.0.1",
     "eslint": "6.7.2",
@@ -41,7 +43,7 @@
     "geckodriver": "1.20.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "3.9.3",
-    "vue-jest": "5.0.0-0",
+    "vue-jest": "4.0.1",
     "wdio-chromedriver-service": "6.0.3",
     "wdio-geckodriver-service": "1.1.0"
   }
